# ImageMLResearch

./: .gitignore  README.md  data_handling_automatic_report.md  pyproject.toml  requirements.txt  test_.txt
demo/chihuahua_vs_muffin/helpers/: check_experiment_dir.py  load_data_dict.py
demo/mnist_digits_experiment/: definition.json  definitions.json  execute.py  execution.py
demo/mnist_digits_experiment/output/: experiment_info.json  experiment_report.md
demo/shoe_vs_ankle_boot_experiment/: definitions.json  execute.py  execution.py
demo/shoe_vs_ankle_boot_experiment/output/: experiment_info.json  experiment_report.md
imlresearch/: __init__.py
imlresearch/data_handling/: data_handler.py
imlresearch/data_handling/io/: create_dataset.py
imlresearch/data_handling/manipulation/: prepare_dataset.py
imlresearch/data_handling/tests/: create_dataset_test.py  data_handler_test.py  label_manager_test.py  prepare_dataset_test.py  save_images_test.py  shuffle_dataset_test.py  split_dataset_test.py  test_runner.py  tfrecord_serialization_test.py
imlresearch/data_handling/tfrecord_serialization/: serialize.py
imlresearch/experimenting/: experiment.py
imlresearch/experimenting/helpers/: ai_support.py  create_experiment_report.py  experiment_assets.py  hparams_suggester.py  load_experiment_definition.py  trial.py
imlresearch/experimenting/tests/: experiment_assets_test.py  experiment_test.py  hparams_suggester_test.py  last_score_singleton_test.py  load_experiment_definition_test.py  test_runner.py  trial_test.py
imlresearch/plotting/functions/: plot_confusion_matrix.py  plot_images.py  plot_model_summary.py
imlresearch/plotting/plotters/: binary_plotter.py  multi_class_plotter.py  plotter.py
imlresearch/plotting/tests/: binary_plotter_test.py  (+14 more)
imlresearch/preprocessing/: image_preprocessor.py
imlresearch/preprocessing_steps/: README.md
imlresearch/research/: researchers.py
imlresearch/training/: trainer.py
imlresearch/utils/: __init__.py
src/: all_test_runner.py
src/data_handling/: data_handler.py
src/experimenting/: experiment.py
src/preprocessing/: image_preprocessor.py
src/research/: researchers.py
src/testing/: base_test_case.py  base_test_case_demo.py
src/training/: trainer.py
src/tuning/: hparams_suggester.py
src/utils/: __init__.py
tiny_defect_project/managing/: categories.py  dataset_getters.py  get_dataframe.py
(+1638 files in other folders)
