[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imlresearch"
version = "0.0.2"
description = "Image Machine Learning Research Toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007" }
authors = [
    { name = "SiulRek", email = "luiskraker2000@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
urls = { "Repository" = "https://github.com/SiulRek/ImageMLResearch" }

dependencies = [
    "tensorflow==2.17.0",
    "pandas==2.2.2",
    "matplotlib==3.8.0",
    "openai==1.34.0",
    "optuna==3.6.1",
    "seaborn==0.13.2",
    "scikit-learn==1.4.1.post1",
    "opencv-python==4.8.1.78"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["./demo", "./local", "demo*", "local*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg"]